--- a/invoice-generator/css/style.css
+++ b/invoice-generator/css/style.css
@@ -1,13 +1,18 @@
 * {
     margin: 0;
     padding: 0; 
+    /*box-sizing: border-box;果然還是要設在這才對!  */
+    box-sizing: border-box;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;800&display=swap');
 
 html, body {
-    height: 100%;
-    box-sizing: border-box;
+/* 
+    嗯... 有意思... 我把它設為min-height: 100vh;而不是height: 100vh;就通了
+    原本的問題是Body size比div的size小，所以margin & padding就無效了...
+*/
+    min-height: 100vh;
     font-family: 'Inter', sans-serif;
     background-color: #1C1C1C;
 }
@@ -17,7 +22,7 @@ body {
 }
 
 .container {
-    height: 100%;
+    height: 720px;
     width: 550px;
     overflow: hidden;
     margin: 0 auto;
@@ -26,7 +31,7 @@ body {
 .section-1 {
     background-color: #3A69D2;
     text-align: center;
-    height: 70px;
+    height: 190px;
     padding: 60px 90px;
 }
 
@@ -47,29 +52,137 @@ body {
     padding: 50px 20px;
     height: 100%;
 }
+
+.container-btn {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+
+button {
+    width: 145px;
+    height: 45px;
+    font-weight: 500;
+    font-size: 16px;
+    background: #D1D4F4;
+    color: #4A4E74;
+    flex: 1;
+    margin-left: 20px;
+    border-radius: 7px;
+    border: 2px solid #D5D4D8;
+    cursor: pointer;
+}
+
+button:active {
+    border: 2px solid white;
+}
+
+button.wash-car{
+    margin-left: 0;
+}
+
+.container-task {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+
+.p-task {
+    flex: 1;
+    color: #D5D4D8;
+}
+
+.p-total {
+    flex: 1;
+    color: #D5D4D8;
+    text-align: right;
+}
+
+div.tasks {
+
+}
+
+.sep {
+    height: 1px;
+    background-color: #C3C6DB;
+    display: block;
+    margin: 25px 0;
+}
+
+.final-1 {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+
+.p-notes {
+    flex: 1;
+    color: #D5D4D8;
+}
+
+.p-total-amount {
+    flex: 1;
+    color: #D5D4D8;
+    text-align: right;
+}
+
+.final-2 {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+
+.payment {
+    flex: 2;
+    font-weight: normal;
+    font-size: 12px;
+    color: white;
+}
+
+.h1-total-amount {
+    color: white;
+    font-weight: 600;
+    font-size: 36px;
+    flex: 1;
+    text-align: right;
+}
+
+.invoice-btn {
+    background-color: #3A69D2;
+    width: 470px;
+    height: 45px;
+    font-weight: 500;
+    font-size: 16px;
+    color: white;
+    border: none;
+    margin-bottom: 15px;
+}
+
 /* <div class="container">
-            <div class="section-1">
-                <h1 class="hero-heading">Invoice Creator</h1>
-                <h3 class="hero-sentence">Thanks for choosing GoodCorp, LLC!</h3>
-            </div>
-            <div class="section-2">
-                <div class="container-btn">
-                    <button class="wash-car">Wash Car</button>
-                    <button class="mow-lawn">Mow Lawn</button>
-                    <button class="pull-weeds">Pull Weeds</button>
-                </div>
-                <div class="container-task">
-                    <p class="p-task">TASK</p>
-                    <p class="p-total">TOTAL</p>
-                    <div class="tasks"></div>
-                </div>
-                <div class="sep"></div>
-                <div class="final">
-                    <p class="notes">NOTES</p>
-                    <p class="p-total-amount">TOTAL AMOUNT</p>
-                    <span class="payment"></span>
-                    <h1 class="total-amount">$0</h1>
-                </div>
-                <button class="invoice-btn"></button>
-            </div>
-        </div> */
+<div class="section-1">
+    <h1 class="hero-heading">Invoice Creator</h1>
+    <h3 class="hero-sentence">Thanks for choosing GoodCorp, LLC!</h3>
+</div>
+<div class="section-2">
+    <div class="container-btn">
+        <button class="wash-car">Wash Car: $10</button>
+        <button class="mow-lawn">Mow Lawn: $20</button>
+        <button class="pull-weeds">Pull Weeds: $30</button>
+    </div>
+    <div class="container-task">
+        <p class="p-task">TASK</p>
+        <p class="p-total">TOTAL</p>
+        <div class="tasks"></div>
+    </div>
+    <div class="sep"></div>
+    <div class="final-1">
+        <p class="p-notes">NOTES</p>
+        <p class="p-total-amount">TOTAL AMOUNT</p>
+    </div>
+    <div class="final-2"> 
+        <span class="payment"></span>
+        <h1 class="h1-total-amount">$0</h1>
+    </div>
+    <button class="invoice-btn">Send invoice</button>
+</div>
+</div> */
